sandbox/output
TicketDispenserTest.java:68: error: cannot find symbol
        TurnNumberSequence vipTurnNumberSequence = new TurnNumberSequenceVip(1001);
                                                       ^
  symbol:   class TurnNumberSequenceVip
  location: class TicketDispenserTest
1 error
